# platform.upstream.atk

./: .gbs.conf  Makefile.am  Makefile.in  NEWS  aclocal.m4  atk-2.6.0.tar.xz.delta  atk-2.6.0.tar.xz.id  atk-2.7.3.tar.xz.delta  atk-2.7.3.tar.xz.id  atk-2.7.4.tar.xz.delta  atk-2.7.4.tar.xz.id  atk-2.7.5.tar.xz.delta  atk-2.7.5.tar.xz.id  atk-2.7.91.tar.xz.delta  atk-2.7.91.tar.xz.id  atk-2.8.0.tar.xz.delta  atk-2.8.0.tar.xz.id  atk.spec  autogen.sh  config.h.win32  configure  configure.ac  project.config
atk/: Makefile.am  Makefile.in  atk-enum-types.c  atk.rc  atk.symbols  atkcomponent.c  atkcomponent.h  atkobject.c  atkobject.h  atkversion.h
docs/: Makefile.in
docs/html/: AtkAction.html  AtkComponent.html  AtkDocument.html  AtkEditableText.html  AtkGObjectAccessible.html  AtkHyperlink.html  AtkHypertext.html  AtkImage.html  AtkNoOpObject.html  AtkNoOpObjectFactory.html  AtkObject.html  AtkObjectFactory.html  AtkRegistry.html  AtkRelation.html  AtkRelationSet.html  AtkSelection.html  AtkStateSet.html  AtkStreamableContent.html  AtkTable.html  AtkText.html  AtkUtil.html  AtkValue.html  AtkWindow.html  api-index-1-12.html  api-index-1-13.html  api-index-1-18.html  api-index-1-20.html  (+20 more)
packaging/: 0001-grab_highlight-callback-added-to-the-AtkComponentInt.patch  0002-Added-missing-symbol-for-export.patch  0003-clear_highlight-callback-added-to-the-AtkComponentIn.patch  0004-get_highlight_index-callback-added-to-the-AtkCompone.patch  0005-Tizen-2.4-spin-repo-configuration.patch  atk.changes  atk.spec  baselibs.conf
po/: atk10.pot
tests/: Makefile.in
(+5 files in other folders)
